unpackaged/main/default/objects/Case_Timecard__c/Case_Timecard__c.object-meta.xml
<CustomObject>
    <description>Object used for recording actual time spent on helpdesk cases.</description>
    <label>Case Timecard</label>
    <nameField>
        <displayFormat>TC-{YY}-{0}</displayFormat>
        <label>Case Timecard ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Timecards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>