unpackaged/main/default/objects/Case_Timecard__c/fields/Owner_del_del__c.field-meta.xml
<CustomField>
    <fullName>Owner_del_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N20000001XjT2EAK</relationshipName>
    <type>Lookup</type>
</CustomField>