unpackaged/main/default/objects/Case_Timecard__c/fields/TimecardNo__c.field-meta.xml
<CustomField>
    <fullName>TimecardNo__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Number to be populated for counting Case Timecards for Dassault Helpdesk Cases.</description>
    <label>Timecard No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>