unpackaged/main/default/objects/Case_Timecard__c/validationRules/ReadWrite_only_for_Creator.validationRule-meta.xml
<ValidationRule>
    <fullName>ReadWrite_only_for_Creator</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Id &lt;&gt; '', CreatedBy.Alias &lt;&gt;  $User.Alias)</errorConditionFormula>
    <errorMessage>Only the creator of a Case Timecard can modify the Timecard.</errorMessage>
</ValidationRule>